# mgmecs

./: .gitignore  CMakeLists.txt  main.cpp  mgmecs.hpp
tests/: basic_ecs.cpp
